[tool.poetry]
name = "pythonproject-10-1"
version = "0.1.0"
description = ""
authors = ["Denis Kopylov <inedden@rambler.ru>"]
readme = "README.md"
packages = [{include = "pythonproject_10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
